// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> shows the correct snapshot tree for the <Button> element 1`] = `
.glamor-0,
[data-glamor-0] {
  text-align: left;
}

<button
  className="glamor-0"
  role="button"
>
  The Button
</button>
`;

exports[`<Button /> shows the correct snapshot tree for the <Button> element with composable options 1`] = `
.glamor-0,
[data-glamor-0] {
  text-align: center;
  min-width: 240px;
  height: 48px;
  padding-left: 32px;
  padding-right: 32px;
  font-size: 14px;
  text-transform: uppercase;
  margin-top: 8px;
  color: pink;
}

<button
  className="glamor-0"
  role="button"
>
  The Composable Button
</button>
`;

exports[`<Button /> shows the correct snapshot tree for the <Button> element with primary option 1`] = `
.glamor-0,
[data-glamor-0] {
  text-align: left;
  color: #fff;
  background-color: #4d4d4d;
}

<button
  className="glamor-0"
  role="button"
>
  The Primary Button
</button>
`;

exports[`<Button /> shows the correct snapshot tree for the <Button> element with secondary option 1`] = `
.glamor-0,
[data-glamor-0] {
  text-align: left;
  color: #fff;
  background-color: #999;
}

<button
  className="glamor-0"
  role="button"
>
  The Secondary Button
</button>
`;
